[package]
name = "recomanding-system"
version = "0.1.0"
authors = ["Hugo Kempfer <hugkempf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rustml = "0.0.7"
